--- a/src/templates/footer/footer.html
+++ b/src/templates/footer/footer.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
         <p>
-            Copyright &copy; Cybage 2013
+            Copyright &copy; Cybage-UI 2013
         </p>
     </div>
 </div>
