--- a/src/templates/header/menu.html
+++ b/src/templates/header/menu.html
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{#if isAdmin}}#dashboard {{else}} #greetings{{/if}}">Cybage UI</a>
+            <a class="navbar-brand" href="{{#if isAdmin}}#dashboard {{else}} #greetings{{/if}}">Cybage-UI</a>
         </div>
         <div class="navbar-collapse collapse">
             {{#if isAdmin}}
