--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -1,31 +1,19 @@
 <div class="loginContainer">
+    <h1>Cybage-UI</h1>
     <form class="form-signin form-horizontal">
-        <fieldset>
-            <legend class="form-signin-heading">Sign in to Cybage UI - Greetings</legend>
-            <div class="control-group row">
-                <label class="control-label" for="inputEmail">Email</label>
-                <div class="controls">
-                    <div class="input-append">
-                        <input class="input-xlarge" id="email" name="email" type="text" placeholder="abc@cybage.com">
-                    </div>
-                    <span class="help-inline"></span>
-                </div>
-            </div>
-            <div class="control-group row">
-                <label class="control-label" for="password">Password</label>
-                <div class="controls">
-                    <input class="input-xlarge" type="password" id="password" name="password" placeholder="Password">
-                    <span class="help-inline"></span>
-                </div>
-            </div>
-            <div class="alert-container"></div>
-            <div class="actions">
-                <button type="submit" class="btn btn-primary"><i class="icon-off icon-white"></i> Sign In</button>
-                <div class="btn-group pull-right">
-                    <button type="button" class="btn"><i class="icon-exclamation-sign"></i> Forgot Password?</button>
-                    <button type="button" class="btn"><i class="icon-question-sign"></i> Help</button>
-                </div>
-            </div>
-        </fieldset>
+        <h2>SIGN IN</h2>
+        <div class="alert-container"></div>
+        <div class="form-group">
+            <input class="form-control" id="email" name="email" type="text" placeholder="USERNAME" autofocus="autofocus">
+            <span class="help-inline"></span>
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="password" id="password" name="password" placeholder="PASSWORD">
+            <span class="help-inline"></span>
+        </div>
+        <div class="actions">
+            <a href="">FORGOT YOUR PASSWORD ? </a> &nbsp;
+            <button type="submit" class="btn btn-primary">Sign In</button>
+        </div>
     </form>
 </div>
