--- a/src/templates/reports/tooltip.html
+++ b/src/templates/reports/tooltip.html
@@ -1,4 +1,4 @@
-<div class="well well-small">
-    <img src="{{imgUrl}}" class="img-poloroid img-responsive" alt="banner">
-    <h4>Total Votes: {{count}}</h4>
+<div class="thumbnail">
+    <img src="{{imgUrl}}" class="img-rounded" width="150" alt="{{imgUrl}}">
+    <h4 class="txt-danger" style="text-align:center">Total Votes: {{count}}</h4>
 </div>
