--- a/src/templates/header/menu.html
+++ b/src/templates/header/menu.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top" {{#unless isAdmin}}style="min-height:70px"{{/unless}}>
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
