--- a/src/css/common/common.css
+++ b/src/css/common/common.css
@@ -1,24 +1,25 @@
-.checkGroup, 
+.checkGroup,
 .inputGroup{ display: none;}
 .fuelux .collapse.in{min-height: 145px;}
-.optionGroup, 
-.checkGroup, 
+.optionGroup,
+.checkGroup,
 .inputGroup{margin: 7px 0 10px 9px;}
 .inputGroup button{margin-top: -10px;}
 .addPrint{display:none;}
 @media print {
-	.container{
-		display:none;
-	}
-	.addPrint.table.table-bordered{
-		display:block !important;
-	}
-	.fuelux .datagrid-stretch-footer{
-		display:none;
-		visibility: hidden;
-	}
+    .container{
+        display:none;
+    }
+    .addPrint.table.table-bordered{
+        display:block !important;
+    }
+    .fuelux .datagrid-stretch-footer{
+        display:none;
+        visibility: hidden;
+    }
 }
 .greetingImage {
-	height: 200px;
-	width: 260px;
+    width: 100%;
+    max-width: 190px;
+    max-height: 160px;
 }
