--- a/src/templates/greetings/greetingConfirm.html
+++ b/src/templates/greetings/greetingConfirm.html
@@ -1,18 +1,22 @@
-<div class="modal hide fade">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3 class="lead">Confirm</h3>
-    </div>
-    <div class="modal-body">
-        <div class="alert-container"></div>
-        <div class="control-group">
-            <div class="controls">
-                <label class="lead text-error">Do you want to submit your response,once submited can't be reverted.</label>
+<div class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h3 class="lead">Confirm</h3>
+        </div>
+        <div class="modal-body">
+            <div class="alert-container"></div>
+            <div class="control-group">
+                <div class="controls">
+                    <label class="lead text-error"><span class="glyphicon glyphicon-question-sign txt-report"></span>&nbsp; Are you sure to submit your response ? </label>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="modal-footer">
-        <a class="btn btn-success confirmGreeting"><i class="icon-thumbs-up icon-white"></i> Yes</a>
-        <a href="#" class="btn" data-dismiss="modal"><i class="icon-thumbs-down"></i> No</a>
+        <div class="modal-footer">
+            <a class="btn btn-primary confirmGreeting"><i class="icon-thumbs-up icon-white"></i> Confirm</a>
+            <a href="#" class="btn btn-default" data-dismiss="modal"><i class="icon-thumbs-down"></i> Cancel</a>
+        </div>
+        </div>
     </div>
 </div>
